# FreeOS

./: CMakeLists.txt  LICENSE.txt  README.md  generateFSImage.sh  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  CPUGraphics.c  CPUGraphics.h  ClockApp.c  ClockApp.h  ColorWheel.c  ColorWheel.h  Config.h  ESP32Support.c  ESP32Support.h  FT6336U.c  FT6336U.h  FilesApp.c  FilesApp.h  FreeOS.c  FreeOS.h  LogWrapper.h  MusicApp.c  MusicApp.h  ObjectiveCC.c  ObjectiveCC.h  PaintApp.c  PaintApp.h  QueueWrapper.c  QueueWrapper.h  SystemApps.c  SystemApps.h  TaskWrapper.c  TaskWrapper.h  es8311.c  es8311.h  idf_component.yml  main.c  main.h  scan.c
main/storage/: 1.txt  2.txt  3.txt  localeData.json  localeIdentifiers.txt  timeZoneData.json  timeZoneNames.txt
